# core

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE_HEADER  README.md  architecture.md
cli-client/: Cargo.toml
cli-client/src/: main.rs
end/: Cargo.toml
end/src/: lib.rs
human/: Cargo.toml
human/src/: lib.rs
idem/: Cargo.toml
idem/src/: lib.rs
mema/: Cargo.toml
mema/src/: lib.rs
nela/: Cargo.toml
nela/src/: lib.rs
