[package]
name = "human"
version = "0.1.0-alpha1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
description = "Wire User & Group Management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idem = { path = "../idem", version = "0.1.0-alpha1" }
mema = { path = "../mema", version = "0.1.0-alpha1" }
end = { path = "../end", version = "0.1.0-alpha1" }
