[package]
name = "nela"
version = "0.1.0-alpha1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
description = "Wire Networking Layer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mema = { path = "../mema", version = "0.1.0-alpha1" }
